feat: replce lfm2-350m-enjp-mt with lfm2.5-1.2b-instruct
